@@ -1,7 +1,7 @@
-FROM maven:3.9.12-eclipse-temurin-25-alpine
+FROM maven:3.9.15-eclipse-temurin-25-alpine AS build
 
 # Set the working directory
-WORKDIR /home/container
+WORKDIR /build
 
 # Copy only the POM file first
 COPY pom.xml .
@@ -20,6 +20,14 @@ COPY *.properties ./
 # Build the jar
 RUN mvn package -q -T2C
 
+FROM eclipse-temurin:25-jre-alpine
+
+# Set the working directory
+WORKDIR /home/container
+
+# Copy the built jar from the build stage
+COPY --from=build /build/target/Minecraft-Utilities.jar target/Minecraft-Utilities.jar
+
 # Make port 80 available to the world outside this container
 EXPOSE 80
 ENV PORT=80
@@ -28,4 +36,10 @@ ENV PORT=80
 ENV ENVIRONMENT=production
 
 # Start the application
-CMD ["java", "-XX:MaxRAMPercentage=75.0", "-Djava.awt.headless=true", "-jar", "target/Minecraft-Utilities.jar"]
+CMD ["java",
+  "-XX:MaxRAMPercentage=75.0",
+  "-XX:+UseZGC",
+  "-XX:+ZGenerational",
+  "-Djava.awt.headless=true",
+  "-jar", "target/Minecraft-Utilities.jar"
+]
